--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -628,6 +628,10 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
 .block {
   display: block;
 }
@@ -920,6 +924,10 @@ video {
   padding-left: 4rem;
 }
 
+.pr-0 {
+  padding-right: 0px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1035,6 +1043,22 @@ video {
 
 .leading-\[34px\] {
   line-height: 34px;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
+}
+
+.leading-\[54px\] {
+  line-height: 54px;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-4 {
+  line-height: 1rem;
 }
 
 .tracking-normal {
@@ -1533,6 +1557,26 @@ video {
     line-height: 2.25rem;
   }
 
+  .md\:leading-7 {
+    line-height: 1.75rem;
+  }
+
+  .md\:leading-\[\] {
+    line-height: ;
+  }
+
+  .md\:leading-\[68px\] {
+    line-height: 68px;
+  }
+
+  .md\:leading-5 {
+    line-height: 1.25rem;
+  }
+
+  .md\:leading-6 {
+    line-height: 1.5rem;
+  }
+
   .md\:text-\[\] {
     color: ;
   }
@@ -1605,6 +1649,10 @@ video {
 
   .lg\:mb-\[66px\] {
     margin-bottom: 66px;
+  }
+
+  .lg\:mb-\[71px\] {
+    margin-bottom: 71px;
   }
 
   .lg\:block {
@@ -1768,5 +1816,9 @@ video {
 
   .lg\:leading-\[45px\] {
     line-height: 45px;
+  }
+
+  .lg\:leading-\[34px\] {
+    line-height: 34px;
   }
 }
